# ai-financy-analytics

./: .gitignore  QUICK-START.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  pyproject.toml  start.ps1  vercel.json
api/: index.py
backend/: .env.example  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  reports.py  test.py
backend/app/data/: document_checklist.json  eligibility_rules.json  historical_queries.json  pending_forms.json
backend/app/models/: schemas.py
backend/app/services/: document_intelligence.py  pdf_generator.py  report_store.py  rule_engine.py
docs/: API-CONNECTION-GUIDE.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: test-backend.html
frontend/src/: App.css  App.jsx  ErrorBoundary.jsx  index.css
frontend/src/api/: client.js
scripts/: start-dev.ps1
