[project]
name = "ai-financy-analytics-api"
version = "0.1.0"
description = "FastAPI backend for AI document processing"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "python-multipart==0.0.17",
  "reportlab==4.2.5",
  "pypdf==5.2.0",
  "Pillow==11.1.0",
  "pytesseract==0.3.13",
  "pypdfium2==4.30.0"
]
